--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,16 @@
 @import "~bootstrap/scss/bootstrap.scss";
-
+.text-center{
+    background-color: lightpink;
+    width:650px;
+    height: 650px;
+    margin: auto;
+    }
+    .list{
+        font-size: 25px;
+    }
+    .input{
+        background-color: whitesmoke;
+    }
 /* 
 
     You can write your own styles here...
