--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,15 +13,5 @@
     }
     h3{
         color: lightslategray;
+        font-family: 'Courier New', Courier, monospace;
     }
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
