--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 .text-center{
-    background-color: lightgray;
+    background-color: lightpink;
     width:650px;
     height: 650px;
     margin: auto;
@@ -10,9 +10,26 @@
     }
     .input{
         background-color: whitesmoke;
+        width: 300px;
+        height: 45px;
+        box-shadow: 50px;
+        border: transparent;
+        padding: 20px;
     }
     h3{
         font-size: 85px;
         color: lightslategray;
         font-family: 'Courier New', Courier, monospace;
+    }
+    .btn-light{
+        border: 0px;
+        color: transparent;
+        margin-left: 2px;
+    }
+   
+    .list-group-item{
+        background-color: whitesmoke;
+        width: 332px;
+        height: 50px;
+        margin: auto;
     }
