--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,14 @@
 @import "~bootstrap/scss/bootstrap.scss";
 .text-center{
     background-color: lightpink;
-    width:650px;
-    height: 650px;
+    width:1000px;
+    height: 800px;
     margin: auto;
     }
     .list{
         font-size: 20px;
     }
     .input{
-        background-color: whitesmoke;
         width: 300px;
         height: 45px;
         box-shadow: 50px;
@@ -17,7 +16,7 @@
         padding: 20px;
     }
     h3{
-        font-size: 85px;
+        font-size: 150px;
         color: lightslategray;
         font-family: 'Courier New', Courier, monospace;
     }
@@ -28,8 +27,8 @@
     }
    
     .list-group-item{
-        background-color: whitesmoke;
-        width: 332px;
-        height: 50px;
+        background-color: lightpink;
+        width: 500px;
+        height: 100px;
         margin: auto;
     }
