set height of body

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 .text-center{
     background-color: lightpink;
     width:1000px;
-    height: 1000px;
+    height: 1500px;
     margin: auto;
     }
     .list{
@@ -36,6 +36,7 @@
         border-color: transparent;
         border-bottom: gray solid 1px;
         border-left: gray solid 1px;
+        border-right: gray solid 1px;
     }
    .card{
        background-color: lightpink;
